--- a/desktop/OVH open.desktop
+++ b/desktop/OVH open.desktop
@@ -3,7 +3,7 @@
 Version=1.0
 Type=Application
 Terminal=false
-Exec=gnome-terminal -- ssh debian@billerot.eu
+Exec=gnome-terminal -- ssh user@host
 Name=Terminal SSH sur OVH
 Comment=Ouverture d'une session SSH sur le serveur OVH
 Icon=xterm
